<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="zm_lbl_copy_to_clipboard">Copy to Clipboard</string>
    <string name="zm_lbl_pull_down_refresh_list_release_to_refresh">Release to refresh</string>
    <string name="zm_lbl_pull_down_refresh_list_pull_down_to_refresh">Pull down to refresh</string>
    <string name="zm_lbl_pull_down_refresh_list_loading">Loading...</string>
    <!-- The title of the date picker dialog. [CHAR LIMIT=NONE] --> 
    <!-- Name of the button in the date/time picker to accept the date/time change -->
    <string name="zm_date_time_set">Set</string>
     <string name="zm_date_time_cancel">Cancel</string>
    <!-- The title of the time picker dialog. [CHAR LIMIT=NONE] -->
    <string name="zm_time_picker_dialog_title">Set time</string>     
    <string name="zm_msg_loading">Loading...</string>    
    <string name="zm_btn_back">Back</string>
    <string name="zm_btn_exit">Exit</string>
    <string name="zm_btn_close">Close</string>
    <string name="zm_btn_ok">OK</string>
    <string name="zm_btn_cancel">Cancel</string>   
    
    <string name="zm_btn_select">Select</string>
    <string name="zm_alert_no_sdcard">No SD memory card</string>
    
    <string name="zm_lbl_internal_storage">Device storage</string>
    <string name="zm_lbl_sdcard">SD Card %s</string>
    <string name="zm_lbl_usb_storage">USB storage %s</string>
    <string name="zm_lbl_external_storage">SD memory card</string>
    <plurals name="zm_lbl_folder_items">
        <item quantity="zero">0 Item</item>
        <item quantity="one">1 Item</item>
        <item quantity="other">%d Items</item>
    </plurals>
    
    <string name="zm_file_size_gb">%s GB</string>
    <string name="zm_file_size_mb">%s MB</string>
    <string name="zm_file_size_kb">%s KB</string>
    <string name="zm_file_size_bytes">%s B</string>
    
    <string name="zm_select_a_image">Select a Image</string>
</resources>
